cabal-version:      3.0
name:               sdl-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Glen Sargent
maintainer:         glensarg@hotmail.co.uk
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable sdl-hs
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0, sdl2, sdl2-image, sdl2-ttf
    hs-source-dirs:   app
    default-language: Haskell2010
